Extension/content-style.css
.hint_element_block{
    background: grey;
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    z-index: 100;
    opacity: 1;
    border-radius: 10px;
}

.hint_element_block:hover{
    opacity: 0;
    transition: 0.5s ease-in-out;
}

.hint_element {
    position: relative;
    background: none transparent;
    border: none;
    margin: 0px;
    padding: 0px;
    position: relative;
    touch-action: none;
    display: inline-block;
    font-size: 2rem;
    padding: 0 1rem;
}

